# naoqi_utilities_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: LedParameters.msg  WordConfidence.msg
srv/: ConfigureSpeech.srv  Explore.srv  GetInput.srv  GetVolume.srv  GoToPosture.srv  MoveTo.srv  PlayAnimation.srv  PlaySound.srv  PlayWebStream.srv  PointAt.srv  Say.srv  SendURL.srv  SetBreathing.srv  SetMoveArmsEnabled.srv  SetOpenCloseHand.srv  SetSecurityDistance.srv  SetStiffnesses.srv  SetTrackerMode.srv  SetVolume.srv  ShowText.srv
